Были добавлены дополнительные проверки

--- a/alfa.csproj
+++ b/alfa.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DaData.ApiClient" Version="1.2.2" />
     <PackageReference Include="EPPlus" Version="7.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
